# python-project-50

./: .coverage  .gitignore  Makefile  README.md  gendiff.py  pyproject.toml
.github/workflows/: ci.yml
gendiff/: diff_builder.py  parsers.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: __init__.py  diff_builder.py  gendiff.py  parsers.py
hexlet_code/formatters/: __init__.py  json.py  plain.py  stylish.py
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py  test_json_format.py  test_plain_format.py
tests/fixtures/: plain_expected.txt
