[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Second project - gendiff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0"
]

[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_code"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v"